Infrastructure finished & auth implemented
